objects/ssot__Scope3EmissionsSource__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AirTravelEmssnFctrId__c</fullName>
        <label>Air Travel Emssn Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessRegion__c</fullName>
        <label>Business Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CityName__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FrgtHaulingEmssnFctrId__c</fullName>
        <label>Freight Hauling Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroundTravelEmssnFctrId__c</fullName>
        <label>Ground Travel Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HotelStayEmssnFctrId__c</fullName>
        <label>Hotel Stay Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Scope 3 Emissions Source Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentEmissionSourceId__c</fullName>
        <label>Parent Emission Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RentalCarEmssnFctrId__c</fullName>
        <label>Rental Car Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmissionSourceType__c</fullName>
        <label>Scope 3 Emission Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateId__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383625778_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3EmissionsSource_RentalCarEmssn_rel</label>
        <referenceTo>ssot__RentalCarEmissionsFactor__dlm</referenceTo>
        <relationshipLabel>Scope3EmissionsSource_RentalCarEmssn_rel</relationshipLabel>
        <relationshipName>rel_1747383625778_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383626632_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3EmissionsSource_HotelStayEmssn_rel</label>
        <referenceTo>ssot__HotelStayEmissionFactor__dlm</referenceTo>
        <relationshipLabel>Scope3EmissionsSource_HotelStayEmssn_rel</relationshipLabel>
        <relationshipName>rel_1747383626632_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383627692_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3EmissionsSource_StateId_map_St_rel</label>
        <referenceTo>ssot__StateProvince__dlm</referenceTo>
        <relationshipLabel>Scope3EmissionsSource_StateId_map_St_rel</relationshipLabel>
        <relationshipName>rel_1747383627692_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>